@@ -272,10 +272,17 @@ RadioBearerStatsCalculator::WriteUlResults (std::ofstream& outFile)
 {
   NS_LOG_FUNCTION (this);
 
-  // Get the unique IMSI / LCID list
-
+  // Get the unique IMSI/LCID pairs list
   std::vector < ImsiLcidPair_t > pairVector;
   for (Uint32Map::iterator it = m_ulTxPackets.begin (); it != m_ulTxPackets.end (); ++it)
+    {
+      if (find (pairVector.begin (), pairVector.end (), (*it).first) == pairVector.end ())
+        {
+          pairVector.push_back ((*it).first);
+        }
+    }
+
+  for (Uint32Map::iterator it = m_ulRxPackets.begin (); it != m_ulRxPackets.end (); ++it)
     {
       if (find (pairVector.begin (), pairVector.end (), (*it).first) == pairVector.end ())
         {
@@ -318,9 +325,17 @@ RadioBearerStatsCalculator::WriteDlResults (std::ofstream& outFile)
 {
   NS_LOG_FUNCTION (this);
 
-  // Get the unique IMSI list
+  // Get the unique IMSI/LCID pairs list
   std::vector < ImsiLcidPair_t > pairVector;
   for (Uint32Map::iterator it = m_dlTxPackets.begin (); it != m_dlTxPackets.end (); ++it)
+    {
+      if (find (pairVector.begin (), pairVector.end (), (*it).first) == pairVector.end ())
+        {
+          pairVector.push_back ((*it).first);
+        }
+    }
+
+  for (Uint32Map::iterator it = m_dlRxPackets.begin (); it != m_dlRxPackets.end (); ++it)
     {
       if (find (pairVector.begin (), pairVector.end (), (*it).first) == pairVector.end ())
         {
